[package]
name = "react-native-chain-libs"
version = "0.1.0"
authors = [""]
edition = "2018"

[build-dependencies]
cbindgen = "0.9"

[dependencies]
js-chain-libs = { git = "https://github.com/InfinitoSolutions/js-chain-libs", branch = "infinito", default-features = false }
wasm-bindgen = { version = "0.2" }
# jni = "0.13.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.13.1"

[lib]
name = "react_native_chain_libs"
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = false
lto = true
opt-level = 's'